# Uebung01

./: 2Bit.cpp  CMakeLists.txt  DNA.cpp  DNA.h  Fasta.h  Peptide.cpp  Peptide.h  README.md  RNA.cpp  RNA.h  Sequence.h  convert.cpp
mirna/: CMakeLists.txt  Candidate.h  Chromosome.h  DNA.cpp  DNA.h  GFFReader.cpp  GFFReader.h  GenomeProcessor.cpp  GenomeProcessor.h  Matrix.h  RNA.cpp  RNA.h  Sequence.cpp  Sequence.h  alignment.h  converter.h  default.json  main.cpp  miRNA.cpp  miRNA.h
test/: CMakeLists.txt  DNA_test.cpp  Peptide_test.cpp  RNA_test.cpp  Sequence_test.cpp
